# plasmaCpuFreqUtility

./: .gitignore  CMakeLists.txt  Makefile  Makefile_  README  kde-plasma-cpufrequtility.spec  make-source-archive  metadata.desktop
contents/code/: CMakeLists.txt  cpu_freq_helper.cpp  cpu_freq_helper.h  main.py  org.freedesktop.auth.cpufrequtility.actions
